@@ -30,15 +30,15 @@ CLEANFILES = xauth_switch_to_sun-des-1
 
 EXTRA_DIST = xauth_switch_to_sun-des-1.cpp
 
-appman_SOURCES = \
+appman_PRE = \
         xon.man
 
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES += $(appman_DATA)
 
 SED = sed
